gymcrm/src/main/java/com/example/gymcrm/api/rest/error/exception/TrainingAddException.java
package com.example.gymcrm.api.rest.error.exception;

public class TrainingAddException extends RuntimeException {
    public TrainingAddException(String message) {
        super(message);
    }
}
